First commit: Configure Redux, hook forms, routers, and functional loginpage with local storage

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,17 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "paths": {
+      "@/*": ["./src/*"],
+      "@components/*": ["./src/components/*"],
+      "@redux/*": ["./src/redux/*"],
+      "@utils/*": ["./src/utils/*"],
+      "@controllers/*": ["./src/controllers/*"],
+      "@hooks/*": ["./src/hooks/*"],
+    }
   },
   "include": [
     "src"
-  ]
+  ],
 }
